WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306319
Automatic sizing of grid items with stretch alignment and aspect-ratio is broken
https://bugs.webkit.org/show_bug.cgi?id=306319
Summary
Automatic sizing of grid items with stretch alignment and aspect-ratio is broken
fantasai
Reported
2026-01-27 01:00:50 PST
Created
attachment 478147
[details]
testcase Regression from
https://commits.webkit.org/305260@main
(
bug 304717
) reported at
rdar://168880191
against
https://www.expedia.com/Toronto-Hotels-Avalon-Suites-Yorkville.h46291442.Hotel-Information
See attached simplified testcase.
Attachments
testcase
(373 bytes, text/html)
2026-01-27 01:00 PST
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
fantasai
Comment 1
2026-01-27 01:02:47 PST
rdar://168880191
fantasai
Comment 2
2026-01-27 01:07:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57313
EWS
Comment 3
2026-01-27 08:51:27 PST
Committed
306282@main
(c2519b57af75): <
https://commits.webkit.org/306282@main
> Reviewed commits have been landed. Closing PR #57313 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug