Cherry-pick c2519b57af75. rdar://169028945

Revert incorrect stretch alignment test in aspect-ratio dependency check
    https://bugs.webkit.org/show_bug.cgi?id=306319
    rdar://168880191

    Reviewed by Sammy Gill.

    305260@main tried to fix an aspect ratio check that wasn't broken, which
    resulted in us failing to compute automatic heights correctly when combining
    aspect-ratio and stretch alignment on auto-sized grid items in the block axis.
    This patch reverts the extra conditional.

    Test: imported/w3c/web-platform-tests/css/css-grid/layout-algorithm/aspect-ratio-stretch-item-001.html
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/layout-algorithm/aspect-ratio-stretch-item-001-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/layout-algorithm/aspect-ratio-stretch-item-001.html: Added.
    * Source/WebCore/rendering/RenderBox.cpp:
    (WebCore::RenderBox::shouldComputeLogicalHeightFromAspectRatio const):

    Canonical link: https://commits.webkit.org/306282@main

Canonical link: https://commits.webkit.org/305413.199@safari-7624-branch